[package]
name = "surf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.41" ,features = ["serde"]}
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0.0"
serde_json = "1.0.142"
uuid = { version = "1.18.0" ,features = ["v4"]}
colored = "3.0.0"
thiserror = "1.0.69"

[features]
default = []
http3 = ["reqwest/http3"]
